--- a/group_vars/sigsum.yml
+++ b/group_vars/sigsum.yml
@@ -5,6 +5,7 @@ sigsum_user: sigsum
 sigsum_db_pw: changeme
 sigsum_db_name: test
 
+mysql_root_user: root
 mysql_root_password: changeme
 mysql_database:
   - test
