--- a/roles/sigsum/tasks/main.yml
+++ b/roles/sigsum/tasks/main.yml
@@ -10,10 +10,11 @@
     - golang
     - git
 
-- name: Create Sigsum user
+- name: Create {{ sigsum_user}} user for sigsum
   user:
     name: "{{ sigsum_user }}"
     password_lock: true
+    home: "/var/sigsum/{{sigsum_user}}"
     system: true
 
 - name: Prepare Trillian source directory
