--- a/roles/sigsum/tasks/main.yml
+++ b/roles/sigsum/tasks/main.yml
@@ -90,12 +90,15 @@
     - restart sigsum primary nodes
     - restart sigsum secondary nodes
 
-- name: Check if database is initiated
-  become: yes
-  become_user: "{{ sigsum_user }}"
-  stat:
-    path: ~/.dbinit.stamp
-  register: db_init_stamp
+# Try to create the database, if it sucsseeds, then we
+# should run the resetdb.sh script.
+- name: check if database exists
+  community.mysql.mysql_db:
+    name: "{{ sigsum_db_name }}"
+    login_user: "{{ sigsum_user }}"
+    login_password: "{{ sigsum_db_pw }}"
+    state: present
+  register: database_exists
 
 - block:
   - name: Initiate db
@@ -108,16 +111,7 @@
       MYSQL_PASSWORD: "{{ sigsum_db_pw }}"
       MYSQL_ROOT_USER: "{{ mysql_root_user }}"
       MYSQL_ROOT_PASSWORD: "{{ mysql_root_password }}"
-
-  - name: Create database init stamp file
-    become: yes
-    become_user: "{{ sigsum_user }}"
-    file:
-      path: ~/.dbinit.stamp
-      state: touch
-    register: db_init_stamp
-
-  when: db_init_stamp.stat.exists == false
+  when: database_exists.changed
 
 - name: Install sigsum-log startup script
   copy:
