--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,4 +1,3 @@
----
 name: ansible
 namespace: sigsum
 readme: README.md
@@ -6,3 +5,8 @@ repository: https://git.glasklar.is/sigsum/admin/ansible
 version: 0.0.3
 authors:
   - Foxboron
+tags:
+  - sigsum
+readme: README.md
+license_file: LICENSE
+description: Roles and modules for installing sigsum
