Add primary_url for secondaries

--- a/roles/sigsum/tasks/main.yml
+++ b/roles/sigsum/tasks/main.yml
@@ -194,6 +194,7 @@
     interval: "{{sigsum_interval}}"
     log_file: "{{sigsum_log_file}}"
     log_level: "{{sigsum_log_file}}"
+    primary_url: "{{sigsum_primary_url}}"
   become_user: "{{ sigsum_user }}"
   become: true
   when: sigsum_role == "secondary"
