--- a/roles/sigsum/tasks/main.yml
+++ b/roles/sigsum/tasks/main.yml
@@ -192,7 +192,7 @@
     key: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/sk"
     interval: "{{sigsum_interval}}"
     log_file: "{{sigsum_log_file}}"
-    log_level: "{{sigsum_log_file}}"
+    log_level: "{{sigsum_log_level}}"
     primary_url: "{{sigsum_primary_url}}"
     primary_pubkey: "{{sigsum_primary_pubkey}}"
     test_mode: "{{sigsum_test_mode}}"
