Create log key using sigsum-key
We take the opportunity to change the name of the keyfile to something
more appropriate -- now that the files generated are key and key.pub,
the name sk is even worse than before.

Note that the file format has changed, so simply renaming sk to logkey
for an already running log is not going to work.

--- a/roles/sigsum/tasks/main.yml
+++ b/roles/sigsum/tasks/main.yml
@@ -161,7 +161,7 @@
     url_prefix: "{{sigsum_url_prefix}}"
     tree_id: "{{sigsum_tree_id}}"
     timeout: "{{sigsum_timeout}}"
-    key: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/sk"
+    key: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/logkey"
     interval: "{{sigsum_interval}}"
     log_file: "{{sigsum_log_file}}"
     log_level: "{{sigsum_log_level}}"
@@ -189,7 +189,7 @@
     url_prefix: "{{ sigsum_url_prefix}}"
     tree_id: "{{sigsum_tree_id}}"
     timeout: "{{sigsum_timeout}}"
-    key: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/sk"
+    key: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/logkey"
     interval: "{{sigsum_interval}}"
     log_file: "{{sigsum_log_file}}"
     log_level: "{{sigsum_log_level}}"
