roles: couple setup changes for the tests

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -11,3 +11,5 @@ tags:
 readme: README.md
 license_file: LICENSE
 description: Roles and modules for installing and setting up a Sigsum log
+dependencies:
+  "community.mysql": "3.6.0"
