--- a/roles/sigsum/tasks/main.yml
+++ b/roles/sigsum/tasks/main.yml
@@ -6,9 +6,11 @@
 
 - name: Install dependencies
   apt:
+    update_cache: yes
     pkg:
     - golang
     - git
+    - sudo
 
 - name: Create {{ sigsum_user }} user for sigsum
   user:
