--- a/roles/sigsum/tasks/main.yml
+++ b/roles/sigsum/tasks/main.yml
@@ -158,21 +158,21 @@
     external_endpoint: "{{ sigsum_external_endpoint }}"
     internal_endpoint: "{{sigsum_internal_endpoint}}"
     trillian_rpc_server: "{{sigsum_trillian_rpc_server}}"
-    ephemeral_test_backend: "{{sigsum_ephemeral_test_backend}}"
+    backend: "{{sigsum_backend}}"
     url_prefix: "{{sigsum_url_prefix}}"
-    tree_id: "{{sigsum_tree_id}}"
     timeout: "{{sigsum_timeout}}"
-    key: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/logkey"
+    key_file: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/logkey"
     interval: "{{sigsum_interval}}"
     log_file: "{{sigsum_log_file}}"
     log_level: "{{sigsum_log_level}}"
     witnesses: "{{sigsum_witnesses}}"
     max_range: "{{sigsum_max_range}}"
-    rate_limit_config: "{{sigsum_rate_limit_config}}"
+    rate_limit_file: "{{sigsum_rate_limit_file}}"
     allow_test_domain: "{{sigsum_allow_test_domain}}"
     secondary_url: "{{sigsum_secondary_url}}"
-    secondary_pubkey: "{{sigsum_secondary_pubkey}}"
-    sth_path: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/sth"
+    secondary_pubkey_file: "{{sigsum_secondary_pubkey_file}}"
+    sth_file: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/sth"
+    trillian_tree_id_file: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/tree-id"
   become_user: "{{ sigsum_user }}"
   become: true
   when: sigsum_role == "primary"
@@ -186,17 +186,15 @@
     external_endpoint: "{{ sigsum_external_endpoint }}"
     internal_endpoint: "{{sigsum_internal_endpoint}}"
     trillian_rpc_server: "{{sigsum_trillian_rpc_server}}"
-    ephemeral_test_backend: "{{sigsum_ephemeral_test_backend}}"
+    backend: "{{sigsum_backend}}"
     url_prefix: "{{ sigsum_url_prefix}}"
-    tree_id: "{{sigsum_tree_id}}"
+    trillian_tree_id_file: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/tree-id"
     timeout: "{{sigsum_timeout}}"
-    key: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/logkey"
+    key_file: "/var/sigsum/{{sigsum_user}}/{{ sigsum_configdir_base }}/{{ sigsum_logname }}/logkey"
     interval: "{{sigsum_interval}}"
     log_file: "{{sigsum_log_file}}"
     log_level: "{{sigsum_log_level}}"
     primary_url: "{{sigsum_primary_url}}"
-    primary_pubkey: "{{sigsum_primary_pubkey}}"
-    test_mode: "{{sigsum_test_mode}}"
   become_user: "{{ sigsum_user }}"
   become: true
   when: sigsum_role == "secondary"
