--- a/roles/sigsum/defaults/main.yml
+++ b/roles/sigsum/defaults/main.yml
@@ -23,11 +23,11 @@ sigsum_trillian_version: v1.5.1
 
 sigsum_lib_srcdir: /usr/src/sigsum-lib-go
 sigsum_lib_repo: https://git.glasklar.is/sigsum/core/sigsum-go
-sigsum_lib_version: v0.1.22-22-ged74255
+sigsum_lib_version: v0.1.23
 
 sigsum_log_srcdir: /usr/src/sigsum-log-go
 sigsum_log_repo: https://git.glasklar.is/sigsum/core/log-go
-sigsum_log_version: v0.8.0-55-g25420cb
+sigsum_log_version: v0.9.0
 
 sigsum_configdir_base: '.config/sigsum'
 
@@ -42,25 +42,25 @@ sigsum_role: "primary"
 sigsum_external_endpoint: "127.0.0.1:14784"
 sigsum_internal_endpoint: "192.168.19.1:14785"
 sigsum_trillian_rpc_server: "localhost:6962"
-sigsum_ephemeral_test_backend: false
-sigsum_tree_id: 0
 sigsum_timeout: 10s
-sigsum_key: ""
+sigsum_key_file: ""
 sigsum_interval: 30s
 sigsum_log_file: ""
 sigsum_log_level: "info"
+sigsum_backend: "trillian"
 
 # Primary
 sigsum_witnesses: ""
 sigsum_max_range: 4096
-sigsum_rate_limit_config: ""
+sigsum_rate_limit_file: ""
 sigsum_allow_test_domain: false
 sigsum_secondary_url: ""
-sigsum_secondary_pubkey: ""
+sigsum_secondary_pubkey_file: ""
+
+# Internal implementation detail
 # TODO: Path wont be used
-sigsum_sth_path: "/var/lib/sigsum-log/sth"
+sigsum_sth_file: "/var/lib/sigsum-log/sth"
+sigsum_trillian_tree_id_file: "/var/lib/sigsum-log/tree-id"
 
 # Secondary
 sigsum_primary_url: ""
-sigsum_primary_pubkey: ""
-sigsum_test_mode: false
