--- a/roles/sigsum/tasks/main.yml
+++ b/roles/sigsum/tasks/main.yml
@@ -4,12 +4,24 @@
 # different versions of trillian and sigsum-log-go. For testing a new
 # version, or for keeping an instance of an older protocol alive.
 
+- name: Add bullseye-backports
+  ansible.builtin.copy:
+    content: 'deb https://ftp.acc.umu.se/debian bullseye-backports main'
+    dest: /etc/apt/sources.list.d/bullseye-backports.list
+  when: ansible_distribution == 'Debian' and ansible_distribution_release == 'bullseye'
+
 - name: Install dependencies
   apt:
     update_cache: yes
     pkg:
-    - golang
+    - golang-1.19
     - git
+
+- name: Create a symbolic link for go and golang-1.19
+  ansible.builtin.file:
+    dest: /usr/bin/go
+    src: /usr/lib/go-1.19/bin/go
+    state: link
 
 - name: Create {{ sigsum_user }} user for sigsum
   user:
